Thu Aug  1 11:18:47 2002  Jaiganesh Balasubramanian  <jai@doc.ece.uci.edu>

	* orbsvcs/orbsvcs/Makefile.IFRService:
	  Updated dependencies.

Thu Aug  1 09:49:12 2002  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/LoadBalancer/Makefile:
	* orbsvcs/orbsvcs/Makefile.CosLoadBalancing:

	  The new Load Balancer requires AMI to be enabled.  Do not
	  attempt to build it if AMI is disabled.

Thu Aug 01 15:19:44 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/LF_Follower_Auto_Adder.h:
        * tao/Transport_Acceptor.h:
        * tao/Transport_Connector.h:
        * orbsvcs/orbsvcs/FaultTolerance/FT_Invocation_Endpoint_Selectors.h:
          Fixed incorrect doxygen @file command

Wed Jul 31 16:04:33 2002  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/tests/Makefile (DIRS):

	  Temporarily removed LoadBalancing test directory from the list
	  of directories to make.  It depends on the old Load Balancer
	  which is in the process of being phased out.

Wed Jul 31 17:53:40 2002  Irfan Pyarali  <irfan@oomworks.com>

	* tests/RTCORBA/Thread_Pool/run_test.pl (run_clients): Fixed an
	  error in the script which was causing unnecessary test failures.

Wed Jul 31 16:40:52 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tao/ORB_Core.h:
	* tao/ValueFactory_Map.h: Applied TAO_SINGLETON_DECLARE to
	  TAO_TSS_RESOURCES, and TAO_VALUEFACTORY_MAP to avoid MSVC from
	  instantiating multiple instantances of singleton in different
	  DLLs.  Thanks to Dimitrije Jankovic <djankov@syncad.com> for
	  reporting ths problem.

Wed Jul 31 16:22:59 2002  Irfan Pyarali  <irfan@oomworks.com>

	* tests/RTCORBA/Profile_And_Endpoint_Selection/run_test.pl: Made
	  it easier to run just IIOP or SHMIOP tests without having to run
	  both.

Wed Jul 31 13:27:10 2002  Ossama Othman  <ossama@uci.edu>

	* tao/TAO_Singleton_Manager.h (_set_unexpected):
	* tao/TAO_Singleton_Manager.cpp (_set_unexpected):

	  New public method that sets the unexpected exception handler to
	  the supplied value.