@@ -113,4 +113,6 @@ main (int argc, char *argv[])
 
   amh_server.register_servant (&servant);
   amh_server.start_threads ();
+
+  return 1;
 }
